# smart-financial-parser

./: README.md  setup.cfg  smart_financial_parser.md  smart_financial_parser.plan
data/: merchants.json  messy_transactions.csv
report/: top_spending.json
smart_financial_parser/: cli.py
smart_financial_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smart_financial_parser/parser/: categorize.py  ingest.py  normalize.py  report.py
tests/: test_categorize.py  test_cli.py  test_cli_additional.py  test_currency_conversion.py  test_integration_clean_amounts.py  test_integration_clean_dates.py  test_integration_merchants.py  test_normalize.py  test_normalize_amount.py  test_normalize_amount_extra.py  test_normalize_date.py  test_normalize_merchant.py  test_report.py
