[metadata]
name = smart_financial_parser
version = 0.1.0
description = Smart Financial Parser
long_description = file: README.md
long_description_content_type = text/markdown
author = Harinee Saravanakumar
license = MIT

[options]
packages = find:
install_requires =
    pandas
    python-dateutil
    dateparser
    rapidfuzz
    pytest
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = .
